kubernetes/apps/default/sabnzbd/ingressRoute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-service-extname
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sabnzbd.porkboi.io
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  type: ExternalName
  externalName: porkboi.io
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sabnzbd.porkboi.io`)
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: networking
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sabnzbd.porkboi.io`)
      services:
        - name: sabnzbd
          port: 8080
